--- a/templates/commande_entity/new.html.twig
+++ b/templates/commande_entity/new.html.twig
@@ -17,7 +17,7 @@
     
 
 {% block body %}
-    <h1>Create new CommandeEntity</h1>
+    <h1>Passez votre Commande</h1>
 
     {{ include('commande_entity/_form.html.twig') }}
 
